--- a/fooding_scrap.ipynb
+++ b/fooding_scrap.ipynb
@@ -59,9 +59,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://lefooding.com/recherche/restaurant/place/paris-10-14710\n",
+      "['https://lefooding.com/restaurants/restaurant-candide-paris']\n",
+      "['https://lefooding.com/restaurants/restaurant-holybelly-5-paris']\n",
+      "['https://lefooding.com/restaurants/bake']\n",
+      "['https://lefooding.com/restaurants/dumbo-petites-ecuries-meilleur-smash-burger-paris']\n",
+      "['https://lefooding.com/restaurants/restaurant-saam-paris-2']\n",
+      "['https://lefooding.com/restaurants/restaurant-urfa-durum-paris-3']\n",
+      "['https://lefooding.com/restaurants/restaurant-gros-bao-paris']\n",
+      "['https://lefooding.com/restaurants/restaurant-billili-paris']\n",
+      "['https://lefooding.com/restaurants/restaurant-brigade-du-tigre-paris']\n",
+      "['https://lefooding.com/restaurants/restaurant-ake-table-vin-paris-3']\n",
+      "['https://lefooding.com/restaurants/restaurant-le-verre-vole-paris-14']\n",
+      "['https://lefooding.com/restaurants/restaurant-les-arlots-paris-3']\n",
+      "https://lefooding.com/recherche/restaurant/place/paris-10-14710?page=2\n",
+      "['https://lefooding.com/restaurants/restaurant-la-cave-a-michel-paris-3']\n",
+      "['https://lefooding.com/restaurants/restaurant-vivant-2-paris']\n",
+      "['https://lefooding.com/restaurants/restaurant-ozlem-paris']\n",
+      "['https://lefooding.com/restaurants/restaurant-panda-panda-paris']\n",
+      "['https://lefooding.com/restaurants/des-assiettes-jijiigantesques']\n",
+      "['https://lefooding.com/restaurants/restaurant-chez-michel-paris-14']\n",
+      "['https://lefooding.com/restaurants/chez-marius']\n",
+      "['https://lefooding.com/restaurants/restaurant-daily-syrien-veggie-paris']\n",
+      "['https://lefooding.com/restaurants/chocho-2']\n",
+      "['https://lefooding.com/restaurants/restaurant-cafe-les-deux-gares-paris']\n",
+      "['https://lefooding.com/restaurants/round']\n",
+      "['https://lefooding.com/restaurants/mache']\n",
+      "https://lefooding.com/recherche/restaurant/place/paris-10-14710?page=3\n",
+      "['https://lefooding.com/restaurants/restaurant-tanguy-paris']\n",
+      "['https://lefooding.com/restaurants/restaurant-sur-mer-paris']\n",
+      "['https://lefooding.com/restaurants/restaurant-urfa-durum-2-paris']\n",
+      "['https://lefooding.com/restaurants/restaurant-plan-d-paris']\n",
+      "['https://lefooding.com/restaurants/sapid']\n",
+      "['https://lefooding.com/restaurants/restaurant-early-june-paris']\n",
+      "['https://lefooding.com/restaurants/restaurant-le-petit-cambodge-paris-11']\n",
+      "['https://lefooding.com/restaurants/restaurant-eels-paris']\n",
+      "[['https://lefooding.com/restaurants/restaurant-candide-paris'], ['https://lefooding.com/restaurants/restaurant-holybelly-5-paris'], ['https://lefooding.com/restaurants/bake'], ['https://lefooding.com/restaurants/dumbo-petites-ecuries-meilleur-smash-burger-paris'], ['https://lefooding.com/restaurants/restaurant-saam-paris-2'], ['https://lefooding.com/restaurants/restaurant-urfa-durum-paris-3'], ['https://lefooding.com/restaurants/restaurant-gros-bao-paris'], ['https://lefooding.com/restaurants/restaurant-billili-paris'], ['https://lefooding.com/restaurants/restaurant-brigade-du-tigre-paris'], ['https://lefooding.com/restaurants/restaurant-ake-table-vin-paris-3'], ['https://lefooding.com/restaurants/restaurant-le-verre-vole-paris-14'], ['https://lefooding.com/restaurants/restaurant-les-arlots-paris-3'], ['https://lefooding.com/restaurants/restaurant-la-cave-a-michel-paris-3'], ['https://lefooding.com/restaurants/restaurant-vivant-2-paris'], ['https://lefooding.com/restaurants/restaurant-ozlem-paris'], ['https://lefooding.com/restaurants/restaurant-panda-panda-paris'], ['https://lefooding.com/restaurants/des-assiettes-jijiigantesques'], ['https://lefooding.com/restaurants/restaurant-chez-michel-paris-14'], ['https://lefooding.com/restaurants/chez-marius'], ['https://lefooding.com/restaurants/restaurant-daily-syrien-veggie-paris'], ['https://lefooding.com/restaurants/chocho-2'], ['https://lefooding.com/restaurants/restaurant-cafe-les-deux-gares-paris'], ['https://lefooding.com/restaurants/round'], ['https://lefooding.com/restaurants/mache'], ['https://lefooding.com/restaurants/restaurant-tanguy-paris'], ['https://lefooding.com/restaurants/restaurant-sur-mer-paris'], ['https://lefooding.com/restaurants/restaurant-urfa-durum-2-paris'], ['https://lefooding.com/restaurants/restaurant-plan-d-paris'], ['https://lefooding.com/restaurants/sapid'], ['https://lefooding.com/restaurants/restaurant-early-june-paris'], ['https://lefooding.com/restaurants/restaurant-le-petit-cambodge-paris-11'], ['https://lefooding.com/restaurants/restaurant-eels-paris']]\n"
+     ]
+    }
+   ],
    "source": [
     "from selenium import webdriver\n",
     "from selenium.webdriver.common.by import By\n",
@@ -85,7 +128,106 @@
     "auto_complete_0 = driver.find_element(By.XPATH, '//*[@aria-label=\"autocompleteResult 0\"]')\n",
     "auto_complete_0.click()\n",
     "time.sleep(5)\n",
+    "WebDriverWait(driver, 10).until(\n",
+    "    EC.presence_of_element_located(((By.XPATH, '//*[@aria-label=\"nextPage\"]')))\n",
+    ")\n",
+    "condition = True\n",
+    "all_links = []\n",
+    "while condition:\n",
+    "    try:\n",
+    "        print(driver.current_url)\n",
+    "        time.sleep(5)\n",
+    "        restaurant_cards = driver.find_elements(By.CSS_SELECTOR, \"a.o-card__container\")\n",
+    "        for link in restaurant_cards:\n",
+    "            list_href = []\n",
+    "            href_link = link.get_attribute(\"href\")\n",
+    "            list_href.append(href_link)\n",
+    "            print(list_href)\n",
+    "            all_links.append(list_href)\n",
+    "        driver.find_element(By.XPATH, '//*[@aria-label=\"nextPage\"]')    \n",
+    "        next_page = driver.find_element(By.XPATH, '//*[@aria-label=\"nextPage\"]')\n",
+    "        next_page.click()\n",
+    "    except:\n",
+    "        condition = False\n",
+    "\n",
+    "print(all_links)\n",
     "driver.quit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "32\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(all_links))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    32\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.DataFrame(all_links)\n",
+    "df.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def first_page(input):\n",
+    "    from selenium import webdriver\n",
+    "    from selenium.webdriver.common.by import By\n",
+    "    from selenium.webdriver.support.ui import WebDriverWait\n",
+    "    from selenium.webdriver.support import expected_conditions as EC\n",
+    "    import time\n",
+    "\n",
+    "    driver = webdriver.Firefox()  # or webdriver.Firefox()\n",
+    "    driver.get(\"https://lefooding.com/restaurants\")\n",
+    "    WebDriverWait(driver, 10).until(\n",
+    "        EC.presence_of_element_located((By.ID, \"didomi-notice-disagree-button\"))\n",
+    "    )\n",
+    "    refuse_button = driver.find_element(By.ID, \"didomi-notice-disagree-button\")\n",
+    "    refuse_button.click()\n",
+    "    search_box = driver.find_element(By.XPATH, \"/html/body/div/div/div/main/div/div[2]/div/div[2]/div[2]/div[1]/form/label/input\")\n",
+    "    search_query = input\n",
+    "    search_box.send_keys(search_query)\n",
+    "    WebDriverWait(driver, 10).until(\n",
+    "        EC.presence_of_element_located(((By.XPATH, '//*[@aria-label=\"autocompleteResult 0\"]')))\n",
+    "    )\n",
+    "    auto_complete_0 = driver.find_element(By.XPATH, '//*[@aria-label=\"autocompleteResult 0\"]')\n",
+    "    auto_complete_0.click()\n",
+    "    time.sleep(5)\n",
+    "    \n",
+    "    \n",
+    "query = \"paris 10\"    \n",
+    "first_page(query)"
    ]
   }
  ],
