working progress on scraping elements

--- a/fooding_scrap.ipynb
+++ b/fooding_scrap.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -67,41 +67,9 @@
      "output_type": "stream",
      "text": [
       "https://lefooding.com/recherche/restaurant/place/paris-10-14710\n",
-      "['https://lefooding.com/restaurants/restaurant-candide-paris']\n",
-      "['https://lefooding.com/restaurants/restaurant-holybelly-5-paris']\n",
-      "['https://lefooding.com/restaurants/bake']\n",
-      "['https://lefooding.com/restaurants/dumbo-petites-ecuries-meilleur-smash-burger-paris']\n",
-      "['https://lefooding.com/restaurants/restaurant-saam-paris-2']\n",
-      "['https://lefooding.com/restaurants/restaurant-urfa-durum-paris-3']\n",
-      "['https://lefooding.com/restaurants/restaurant-gros-bao-paris']\n",
-      "['https://lefooding.com/restaurants/restaurant-billili-paris']\n",
-      "['https://lefooding.com/restaurants/restaurant-brigade-du-tigre-paris']\n",
-      "['https://lefooding.com/restaurants/restaurant-ake-table-vin-paris-3']\n",
-      "['https://lefooding.com/restaurants/restaurant-le-verre-vole-paris-14']\n",
-      "['https://lefooding.com/restaurants/restaurant-les-arlots-paris-3']\n",
       "https://lefooding.com/recherche/restaurant/place/paris-10-14710?page=2\n",
-      "['https://lefooding.com/restaurants/restaurant-la-cave-a-michel-paris-3']\n",
-      "['https://lefooding.com/restaurants/restaurant-vivant-2-paris']\n",
-      "['https://lefooding.com/restaurants/restaurant-ozlem-paris']\n",
-      "['https://lefooding.com/restaurants/restaurant-panda-panda-paris']\n",
-      "['https://lefooding.com/restaurants/des-assiettes-jijiigantesques']\n",
-      "['https://lefooding.com/restaurants/restaurant-chez-michel-paris-14']\n",
-      "['https://lefooding.com/restaurants/chez-marius']\n",
-      "['https://lefooding.com/restaurants/restaurant-daily-syrien-veggie-paris']\n",
-      "['https://lefooding.com/restaurants/chocho-2']\n",
-      "['https://lefooding.com/restaurants/restaurant-cafe-les-deux-gares-paris']\n",
-      "['https://lefooding.com/restaurants/round']\n",
-      "['https://lefooding.com/restaurants/mache']\n",
       "https://lefooding.com/recherche/restaurant/place/paris-10-14710?page=3\n",
-      "['https://lefooding.com/restaurants/restaurant-tanguy-paris']\n",
-      "['https://lefooding.com/restaurants/restaurant-sur-mer-paris']\n",
-      "['https://lefooding.com/restaurants/restaurant-urfa-durum-2-paris']\n",
-      "['https://lefooding.com/restaurants/restaurant-plan-d-paris']\n",
-      "['https://lefooding.com/restaurants/sapid']\n",
-      "['https://lefooding.com/restaurants/restaurant-early-june-paris']\n",
-      "['https://lefooding.com/restaurants/restaurant-le-petit-cambodge-paris-11']\n",
-      "['https://lefooding.com/restaurants/restaurant-eels-paris']\n",
-      "[['https://lefooding.com/restaurants/restaurant-candide-paris'], ['https://lefooding.com/restaurants/restaurant-holybelly-5-paris'], ['https://lefooding.com/restaurants/bake'], ['https://lefooding.com/restaurants/dumbo-petites-ecuries-meilleur-smash-burger-paris'], ['https://lefooding.com/restaurants/restaurant-saam-paris-2'], ['https://lefooding.com/restaurants/restaurant-urfa-durum-paris-3'], ['https://lefooding.com/restaurants/restaurant-gros-bao-paris'], ['https://lefooding.com/restaurants/restaurant-billili-paris'], ['https://lefooding.com/restaurants/restaurant-brigade-du-tigre-paris'], ['https://lefooding.com/restaurants/restaurant-ake-table-vin-paris-3'], ['https://lefooding.com/restaurants/restaurant-le-verre-vole-paris-14'], ['https://lefooding.com/restaurants/restaurant-les-arlots-paris-3'], ['https://lefooding.com/restaurants/restaurant-la-cave-a-michel-paris-3'], ['https://lefooding.com/restaurants/restaurant-vivant-2-paris'], ['https://lefooding.com/restaurants/restaurant-ozlem-paris'], ['https://lefooding.com/restaurants/restaurant-panda-panda-paris'], ['https://lefooding.com/restaurants/des-assiettes-jijiigantesques'], ['https://lefooding.com/restaurants/restaurant-chez-michel-paris-14'], ['https://lefooding.com/restaurants/chez-marius'], ['https://lefooding.com/restaurants/restaurant-daily-syrien-veggie-paris'], ['https://lefooding.com/restaurants/chocho-2'], ['https://lefooding.com/restaurants/restaurant-cafe-les-deux-gares-paris'], ['https://lefooding.com/restaurants/round'], ['https://lefooding.com/restaurants/mache'], ['https://lefooding.com/restaurants/restaurant-tanguy-paris'], ['https://lefooding.com/restaurants/restaurant-sur-mer-paris'], ['https://lefooding.com/restaurants/restaurant-urfa-durum-2-paris'], ['https://lefooding.com/restaurants/restaurant-plan-d-paris'], ['https://lefooding.com/restaurants/sapid'], ['https://lefooding.com/restaurants/restaurant-early-june-paris'], ['https://lefooding.com/restaurants/restaurant-le-petit-cambodge-paris-11'], ['https://lefooding.com/restaurants/restaurant-eels-paris']]\n"
+      "['https://lefooding.com/restaurants/restaurant-candide-paris', 'https://lefooding.com/restaurants/restaurant-holybelly-5-paris', 'https://lefooding.com/restaurants/bake', 'https://lefooding.com/restaurants/dumbo-petites-ecuries-meilleur-smash-burger-paris', 'https://lefooding.com/restaurants/restaurant-saam-paris-2', 'https://lefooding.com/restaurants/restaurant-urfa-durum-paris-3', 'https://lefooding.com/restaurants/restaurant-gros-bao-paris', 'https://lefooding.com/restaurants/restaurant-billili-paris', 'https://lefooding.com/restaurants/restaurant-brigade-du-tigre-paris', 'https://lefooding.com/restaurants/restaurant-ake-table-vin-paris-3', 'https://lefooding.com/restaurants/restaurant-le-verre-vole-paris-14', 'https://lefooding.com/restaurants/restaurant-les-arlots-paris-3', 'https://lefooding.com/restaurants/restaurant-la-cave-a-michel-paris-3', 'https://lefooding.com/restaurants/restaurant-vivant-2-paris', 'https://lefooding.com/restaurants/restaurant-ozlem-paris', 'https://lefooding.com/restaurants/restaurant-panda-panda-paris', 'https://lefooding.com/restaurants/des-assiettes-jijiigantesques', 'https://lefooding.com/restaurants/restaurant-chez-michel-paris-14', 'https://lefooding.com/restaurants/chez-marius', 'https://lefooding.com/restaurants/restaurant-daily-syrien-veggie-paris', 'https://lefooding.com/restaurants/chocho-2', 'https://lefooding.com/restaurants/restaurant-cafe-les-deux-gares-paris', 'https://lefooding.com/restaurants/round', 'https://lefooding.com/restaurants/mache', 'https://lefooding.com/restaurants/restaurant-tanguy-paris', 'https://lefooding.com/restaurants/restaurant-sur-mer-paris', 'https://lefooding.com/restaurants/restaurant-urfa-durum-2-paris', 'https://lefooding.com/restaurants/restaurant-plan-d-paris', 'https://lefooding.com/restaurants/sapid', 'https://lefooding.com/restaurants/restaurant-early-june-paris', 'https://lefooding.com/restaurants/restaurant-le-petit-cambodge-paris-11', 'https://lefooding.com/restaurants/restaurant-eels-paris']\n"
      ]
     }
    ],
@@ -139,11 +107,8 @@
     "        time.sleep(5)\n",
     "        restaurant_cards = driver.find_elements(By.CSS_SELECTOR, \"a.o-card__container\")\n",
     "        for link in restaurant_cards:\n",
-    "            list_href = []\n",
     "            href_link = link.get_attribute(\"href\")\n",
-    "            list_href.append(href_link)\n",
-    "            print(list_href)\n",
-    "            all_links.append(list_href)\n",
+    "            all_links.append(href_link)\n",
     "        driver.find_element(By.XPATH, '//*[@aria-label=\"nextPage\"]')    \n",
     "        next_page = driver.find_element(By.XPATH, '//*[@aria-label=\"nextPage\"]')\n",
     "        next_page.click()\n",
@@ -156,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -173,26 +138,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0    32\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n",
+      "{'name': 'CANDIDE', 'price': 'De 36 à 50 €', 'address': '35 Rue de Sambre-et-Meuse, 75010 Paris, France', 'opening_hours': 'De 12h à 14h et 19h30 à 22h30. Fermé samedi et dimanche.', 'food_type': ['VIANDES / GRILLADES', 'TERROIR'], 'tags': []}\n"
+     ]
     }
    ],
    "source": [
-    "import pandas as pd\n",
+    "driver = webdriver.Firefox()  # or webdriver.Firefox()\n",
+    "driver.get(all_links[0])\n",
+    "data_restaurants = []\n",
     "\n",
-    "df = pd.DataFrame(all_links)\n",
-    "df.count()"
+    "WebDriverWait(driver, 10).until(\n",
+    "    EC.presence_of_element_located((By.ID, \"didomi-notice-disagree-button\"))\n",
+    ")\n",
+    "refuse_button = driver.find_element(By.ID, \"didomi-notice-disagree-button\")\n",
+    "refuse_button.click()\n",
+    "\n",
+    "show_more_tags = driver.find_element(By.XPATH, '//*[@aria-label=\"expand\"]')\n",
+    "show_more_tags.click()\n",
+    "\n",
+    "restau_name = driver.find_element(By.CLASS_NAME, \"pageGuide__title\").text\n",
+    "price = driver.find_element(By.XPATH, '//*[@aria-label=\"price\"]').text\n",
+    "address = driver.find_element(By.CLASS_NAME, \"pageGuide__infosAddress\").text\n",
+    "headers_info = driver.find_element(By.CLASS_NAME, \"pageGuide__header\")\n",
+    "all_p = headers_info.find_elements(By.TAG_NAME, 'p')\n",
+    "op_hours = all_p[-1].text\n",
+    "\n",
+    "all_li = headers_info.find_elements(By.XPATH, \"//li[@class='e-row--border']\")\n",
+    "\n",
+    "envie_de = all_li[0]\n",
+    "food_types = envie_de.find_elements(By.CLASS_NAME, \"e-rowTagsList__tag\")\n",
+    "list_food_types = []\n",
+    "for food_type in food_types:\n",
+    "    list_food_types.append(food_type.text)\n",
+    "\n",
+    "\n",
+    "headers_info = driver.find_element(By.CLASS_NAME, \"pageGuide__header\")\n",
+    "all_li = headers_info.find_elements(By.TAG_NAME, 'li')\n",
+    "tags = all_li[1]\n",
+    "all_tags = tags.find_elements(By.CLASS_NAME, \"e-rowTagsList__tag\")\n",
+    "print(all_tags)\n",
+    "list_all_tags = []\n",
+    "for tag in all_tags:\n",
+    "    list_all_tags.append(tag.text)    \n",
+    "\n",
+    "dic_restaurant = {\n",
+    "    \"name\" : restau_name,\n",
+    "    \"price\" : price,\n",
+    "    \"address\" : address,\n",
+    "    \"opening_hours\" : op_hours,\n",
+    "    \"food_type\" : list_food_types,\n",
+    "    \"tags\" : list_all_tags\n",
+    "}\n",
+    "\n",
+    "print(dic_restaurant)\n",
+    "driver.quit()"
    ]
   },
   {
@@ -228,6 +235,77 @@
     "    \n",
     "query = \"paris 10\"    \n",
     "first_page(query)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['https://lefooding.com/restaurants/restaurant-candide-paris',\n",
+       " 'https://lefooding.com/restaurants/restaurant-holybelly-5-paris',\n",
+       " 'https://lefooding.com/restaurants/bake',\n",
+       " 'https://lefooding.com/restaurants/dumbo-petites-ecuries-meilleur-smash-burger-paris',\n",
+       " 'https://lefooding.com/restaurants/restaurant-saam-paris-2',\n",
+       " 'https://lefooding.com/restaurants/restaurant-urfa-durum-paris-3',\n",
+       " 'https://lefooding.com/restaurants/restaurant-gros-bao-paris',\n",
+       " 'https://lefooding.com/restaurants/restaurant-billili-paris',\n",
+       " 'https://lefooding.com/restaurants/restaurant-brigade-du-tigre-paris',\n",
+       " 'https://lefooding.com/restaurants/restaurant-ake-table-vin-paris-3',\n",
+       " 'https://lefooding.com/restaurants/restaurant-le-verre-vole-paris-14',\n",
+       " 'https://lefooding.com/restaurants/restaurant-les-arlots-paris-3',\n",
+       " 'https://lefooding.com/restaurants/restaurant-la-cave-a-michel-paris-3',\n",
+       " 'https://lefooding.com/restaurants/restaurant-vivant-2-paris',\n",
+       " 'https://lefooding.com/restaurants/restaurant-ozlem-paris',\n",
+       " 'https://lefooding.com/restaurants/restaurant-panda-panda-paris',\n",
+       " 'https://lefooding.com/restaurants/des-assiettes-jijiigantesques',\n",
+       " 'https://lefooding.com/restaurants/restaurant-chez-michel-paris-14',\n",
+       " 'https://lefooding.com/restaurants/chez-marius',\n",
+       " 'https://lefooding.com/restaurants/restaurant-daily-syrien-veggie-paris',\n",
+       " 'https://lefooding.com/restaurants/chocho-2',\n",
+       " 'https://lefooding.com/restaurants/restaurant-cafe-les-deux-gares-paris',\n",
+       " 'https://lefooding.com/restaurants/round',\n",
+       " 'https://lefooding.com/restaurants/mache',\n",
+       " 'https://lefooding.com/restaurants/restaurant-tanguy-paris',\n",
+       " 'https://lefooding.com/restaurants/restaurant-sur-mer-paris',\n",
+       " 'https://lefooding.com/restaurants/restaurant-urfa-durum-2-paris',\n",
+       " 'https://lefooding.com/restaurants/restaurant-plan-d-paris',\n",
+       " 'https://lefooding.com/restaurants/sapid',\n",
+       " 'https://lefooding.com/restaurants/restaurant-early-june-paris',\n",
+       " 'https://lefooding.com/restaurants/restaurant-le-petit-cambodge-paris-11',\n",
+       " 'https://lefooding.com/restaurants/restaurant-eels-paris']"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_links"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://lefooding.com/restaurants/restaurant-eels-paris'"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_links[-1]"
    ]
   }
  ],
